@@ -439,7 +439,8 @@ Version 1.5.1
 * Fixed a bug that will output the matrix of counts inverted
 
 Version 1.6.0
-* Made the parsing of unique UMIs gene by gene and parallel 
+* Made the parsing of unique UMIs gene by gene and parallel
+* AdjacentBi is now the default method for UMI counting
 * Made the trimming function output the trimmed R2 in BAM format with the barcode and UMI
 * Made the mapping function works with a BAM file as input (latest STAR release)
 * Made the annotation function parallel
